--- a/test.ipynb
+++ b/test.ipynb
@@ -9,17 +9,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cookies: [{'domain': '.ncu.edu.tw', 'expiry': 1745064614, 'httpOnly': False, 'name': '_ga_CLHSRC7YPQ', 'path': '/', 'sameSite': 'Lax', 'secure': False, 'value': 'GS1.1.1710504614.1.0.1710504614.0.0.0'}, {'domain': '.ncu.edu.tw', 'expiry': 1745064614, 'httpOnly': False, 'name': '_ga', 'path': '/', 'sameSite': 'Lax', 'secure': False, 'value': 'GA1.1.574819090.1710504614'}, {'domain': 'military.ncu.edu.tw', 'httpOnly': False, 'name': 'PHPSESSID', 'path': '/', 'sameSite': 'Lax', 'secure': False, 'value': '1d2o1d2fj85bli4593tfpdmo11'}]\n",
+      "Headers: {'Host': 'military.ncu.edu.tw', 'Connection': 'keep-alive', 'sec-ch-ua': '\"Chromium\";v=\"122\", \"Not(A:Brand\";v=\"24\", \"Google Chrome\";v=\"122\"', 'sec-ch-ua-mobile': '?0', 'sec-ch-ua-platform': '\"macOS\"', 'Upgrade-Insecure-Requests': '1', 'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/122.0.0.0 Safari/537.36', 'Accept': 'text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.7', 'Sec-Fetch-Site': 'same-origin', 'Sec-Fetch-Mode': 'navigate', 'Sec-Fetch-Dest': 'document', 'Referer': 'https://military.ncu.edu.tw/epaper/index.php', 'Accept-Encoding': 'gzip, deflate, br', 'Accept-Language': 'zh-TW,zh;q=0.9', 'Cookie': 'PHPSESSID=1d2o1d2fj85bli4593tfpdmo11'}\n"
+     ]
+    }
+   ],
    "source": [
     "from seleniumwire import webdriver  \n",
     "from fake_useragent import UserAgent\n",
+    "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.chrome.options import Options\n",
-    "\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions as EC\n",
+    "from time import sleep\n",
     "\n",
     "# - step1 selenium 上網登入 ee-class\n",
-    "url = \"https://military.ncu.edu.tw\" # = ee-class url\n",
+    "url = \"https://military.ncu.edu.tw/index.php\" # = ee-class url\n",
     "\n",
     "# : user agent setting\n",
     "ua = UserAgent()\n",
@@ -27,29 +39,74 @@
     "\n",
     "# : option setting\n",
     "chrome_opt = Options()\n",
-    "chrome_opt.add_argument(\"start-maximized\")  # 開啟視窗最大化\n",
-    "chrome_opt.add_argument(\"--disable-proxy-certificate-handler\")\n",
-    "chrome_opt.add_argument(\"--disable-content-security-policy\")\n",
-    "chrome_opt.add_argument(\"--disable-proxy-certificate-handler\")\n",
-    "chrome_opt.add_argument(\"--ignore-certificate-errors\")\n",
-    "chrome_opt.add_argument(\"--incognito\")      # 設置隱身模式，可以避免個人化廣告，加速網頁瀏覽\n",
+    "chrome_opt.add_argument(\"start-maximized\")  # 設定瀏覽器啟動時開啟視窗最大化，提供較大的視野和操作空間\n",
+    "chrome_opt.add_argument(\"--disable-proxy-certificate-handler\")  # 禁用代理伺服器的證書處理，避免因證書問題而影響網頁載入\n",
+    "chrome_opt.add_argument(\"--disable-content-security-policy\")  # 禁用內容安全政策(CSP)，允許加載非同源的腳本，有助於測試開發\n",
+    "chrome_opt.add_argument(\"--ignore-certificate-errors\")  # 忽略證書錯誤，有助於訪問自簽名證書的開發環境或測試站點\n",
+    "chrome_opt.add_argument(\"--incognito\")  # 啟動無痕(隱身)模式，不會保存瀏覽歷史、Cookies等資料，有助於保護隱私和測試\n",
     "\n",
     "# : driver setting \n",
     "driver = webdriver.Chrome(options = chrome_opt) # => insert the option to the driver (can be overridden)\n",
     "driver.delete_all_cookies() # 防止污染\n",
+    "driver.get(url)\n",
+    "sleep(2)\n",
+    "\n",
+    "# @ Action.\n",
+    "nav_link = driver.find_element(By.ID, \"nav-link\")\n",
+    "driver.execute_script(\"arguments[0].click();\", nav_link)\n",
     "\n",
     "# : Get the Cookies & Headers\n",
     "current_login_cookie = driver.get_cookies()\n",
     "current_login_requests = driver.requests\n",
     "\n",
     "headers = {}\n",
-    "for request in driver.requests:\n",
-    "    if f\"https://ncueeclass.ncu.edu.tw/dashboard\" == str(request):\n",
-    "        headers = {k: v for k, v in request.headers.items()} \n",
+    "for request in current_login_requests:\n",
+    "    if request.url == url:\n",
+    "        headers = {k: v for k, v in request.headers.items()}\n",
+    "\n",
+    "print(\"Cookies:\", current_login_cookie)\n",
+    "print(\"Headers:\", headers)\n",
+    "\n",
+    "sleep(5)\n",
+    "driver.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Host': 'military.ncu.edu.tw',\n",
+       " 'Connection': 'keep-alive',\n",
+       " 'sec-ch-ua': '\"Chromium\";v=\"122\", \"Not(A:Brand\";v=\"24\", \"Google Chrome\";v=\"122\"',\n",
+       " 'sec-ch-ua-mobile': '?0',\n",
+       " 'sec-ch-ua-platform': '\"macOS\"',\n",
+       " 'Upgrade-Insecure-Requests': '1',\n",
+       " 'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/122.0.0.0 Safari/537.36',\n",
+       " 'Accept': 'text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.7',\n",
+       " 'Sec-Fetch-Site': 'same-origin',\n",
+       " 'Sec-Fetch-Mode': 'navigate',\n",
+       " 'Sec-Fetch-Dest': 'document',\n",
+       " 'Referer': 'https://military.ncu.edu.tw/epaper/index.php',\n",
+       " 'Accept-Encoding': 'gzip, deflate, br',\n",
+       " 'Accept-Language': 'zh-TW,zh;q=0.9',\n",
+       " 'Cookie': 'PHPSESSID=1d2o1d2fj85bli4593tfpdmo11'}"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for request in current_login_requests:\n",
+    "    if request.url == url:\n",
+    "        headers = {k: v for k, v in request.headers.items()}\n",
     "        \n",
-    "# 自動填入 headers\n",
-    "print(\"cookies:\", current_login_cookie)\n",
-    "print(\"requests:\", current_login_requests)\n"
+    "headers"
    ]
   },
   {
@@ -61,30 +118,180 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "網頁標題: 歡迎光臨國立中央大學校園安全中心\n"
+      "國立中央大學生活輔導組 ﻿\n",
+      "\n",
+      "國立中央大學生活輔導組\n",
+      "回頁首\n",
+      "中大首頁\n",
+      "學生事務處\n",
+      " 管理者登入\n",
+      "關於生輔組\n",
+      "組織介紹\n",
+      "成員介紹\n",
+      "地理位置\n",
+      "聯絡我們\n",
+      "校安中心\n",
+      "藥物濫用\n",
+      "折抵役期\n",
+      "交通安全\n",
+      "品德教育\n",
+      "校園安全\n",
+      "災害防救\n",
+      "國軍招募\n",
+      "智慧財產\n",
+      "防制霸凌\n",
+      "防制詐騙\n",
+      "校安中心FB\n",
+      "生活輔導\n",
+      "學生兵役\n",
+      "獎懲／操行\n",
+      "學生請假\n",
+      "研究生獎助學金\n",
+      "獎學金\n",
+      "學雜費減免\n",
+      "弱勢助學計畫-弱勢助學金\n",
+      "弱勢助學計畫-生活助學金\n",
+      "就學貸款\n",
+      "急難救助金\n",
+      "校內工讀\n",
+      "Information for International Students\n",
+      "遺失物招領\n",
+      "外宿資訊\n",
+      "表單下載\n",
+      "相關連結\n",
+      "緊急應變樓層平面圖\n",
+      "學生藥物防治資源網\n",
+      "社會安全網 關懷e起來\n",
+      "國防部\n",
+      "國軍人才招募中心\n",
+      "165全民防詐騙網\n",
+      "內政部役政署\n",
+      "財團法人法律扶助基金會\n",
+      "消防影音新聞台\n",
+      "交通安全入口網\n",
+      "校園霸凌防治網\n",
+      "崔媽媽基金會\n",
+      "法治教育學生手冊下載區\n",
+      "智慧財產局\n",
+      "中央大學研究發展處\n",
+      "衛福部疾管署\n",
+      "相關法規\n",
+      "快速連結\n",
+      "兵役緩徵查詢\n",
+      "常見Q&A\n",
+      "獎助學金管理系統\n",
+      "就學補助系統\n",
+      "活動回顧\n",
+      "校園安全地圖\n",
+      "\n",
+      "            ﻿\n",
+      "提醒各位同學使用瓦斯熱水器，須注意室內保持空氣流通\n",
+      "預防七大熱門詐騙請參閱校園安全公告\n",
+      " 最新公告\n",
+      "查詢類別消息\n",
+      "校園安全\n",
+      "交通安全\n",
+      "防藥物濫用\n",
+      "軍訓通訊\n",
+      "遺失物協尋\n",
+      "品德教育\n",
+      "智慧財產\n",
+      "獎助學金\n",
+      "學生兵役\n",
+      "就學貸款\n",
+      "學雜費減免\n",
+      "急難救助\n",
+      "弱勢助學\n",
+      "學生請假\n",
+      "學生獎懲\n",
+      "其他\n",
+      "公告日期\n",
+      "公告類別\n",
+      "公告標題\n",
+      "2024-03-14\n",
+      "交通安全\n",
+      "交通安全報您知第0029期:「搭乘大眾交通工具應注意安全事項」\n",
+      "2024-02-29\n",
+      "交通安全\n",
+      "中華民國汽車安全協會「學生總動員」交通安全大競賽─113年度全國汽車交通安全海報創作大賽\n",
+      "2024-02-29\n",
+      "弱勢助學\n",
+      "§§自113年度(本學期)起~「大專校院弱勢學生助學計畫-校外租屋租金補貼」申請方式變更\n",
+      "2024-02-20\n",
+      "其他\n",
+      "第五屆百花川詩獎徵稿\n",
+      "2024-02-20\n",
+      "交通安全\n",
+      "113年交通部機車考照補助\n",
+      "2024-03-01\n",
+      "學生兵役\n",
+      "「國防部全球資訊網」成立1年期義務役專區\n",
+      "2024-02-22\n",
+      "急難救助\n",
+      "公告「財團法人台北行天宮急難濟助辦法」\n",
+      "2024-02-21\n",
+      "校園安全\n",
+      "§§ 開學了~~請同學於2/28日前上Portal更新校外租屋地址資料，以完成註冊程序(未完成者無法申請校外租屋租金補貼)\n",
+      "2024-02-05\n",
+      "交通安全\n",
+      "交通安全報您知第0028期【113年寒假及農曆新年連假交安注意事項】\n",
+      "2024-02-02\n",
+      "交通安全\n",
+      "113年交通部公路局機車考照補助\n",
+      "第一頁\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "下一頁\n",
+      "最末頁\n",
+      " 生輔組活動\n",
+      "110上各項獎學金頒獎典禮\n",
+      "包含本校各項獎學金，如羅家倫校長紀念獎學金、優學學生獎學金等，圖中為110學年度上學期的得獎者及各級師長。\n",
+      "相簿連結\n",
+      "朱順一合勤獎學金頒獎典禮\n",
+      "合勤科技董事長朱順一博士勉勵同學「態度決定高度」，眼界多大世界就有多大，藉由本項獎學金讓更多優秀學子用教育翻轉人生。\n",
+      "相簿連結\n",
+      "109上各項獎學金頒獎典禮\n",
+      "包含本校各項獎學金，如羅家倫校長紀念獎學金、優學學生獎學金等，圖中為109學年度上學期的得獎者及各級師長。\n",
+      "相簿連結\n",
+      "\n",
+      "    ﻿\n",
+      "\n",
+      "        國立中央大學生輔組 電話：(03)4227151 #57212 (校安中心) #57220-57224  校安專線03-2805666、0911-949-630\n",
+      "         建議使用Chrome、Firefox瀏覽器，以獲得最佳瀏覽體驗 隱私權政策聲明 [('', 'https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'), ('', 'https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css'), ('', 'https://military.ncu.edu.tw/index.php/images/homepage/logos.png'), ('', 'https://military.ncu.edu.tw/index.php/css/global_style.css'), ('', 'https://military.ncu.edu.tw/index.php/css/bootstrap.min.css'), ('', 'https://military.ncu.edu.tw/index.php/css/menu.css'), ('', 'https://military.ncu.edu.tw/index.php/css/maquee.css'), ('', 'https://military.ncu.edu.tw/index.php/css/slider-styles.css'), ('', 'https://military.ncu.edu.tw/index.php/css/sidebar.css'), ('', 'https://www.ncu.edu.tw/'), ('回頁首', 'https://military.ncu.edu.tw/index.php/index.php'), ('中大首頁', 'https://www.ncu.edu.tw/'), ('學生事務處', 'http://osa.ncu.edu.tw/index.php'), ('管理者登入', 'https://military.ncu.edu.tw/index.php/login.php'), ('', 'https://military.ncu.edu.tw/index.php/index.php'), ('關於生輔組', 'https://www.ncu.edu.tw/'), ('組織介紹', 'https://military.ncu.edu.tw/index.php/organization.php'), ('成員介紹', 'https://military.ncu.edu.tw/index.php/member.php'), ('地理位置', 'https://military.ncu.edu.tw/index.php/location.php'), ('聯絡我們', 'https://military.ncu.edu.tw/index.php/contact.php'), ('校安中心', 'https://www.ncu.edu.tw/'), ('藥物濫用', 'https://military.ncu.edu.tw/index.php/drugprevention.php'), ('折抵役期', 'https://military.ncu.edu.tw/index.php/derate.php'), ('交通安全', 'https://military.ncu.edu.tw/index.php/traffic.php'), ('品德教育', 'https://military.ncu.edu.tw/index.php/morality.php'), ('校園安全', 'https://military.ncu.edu.tw/CSRC/SecurityCenter.php'), ('災害防救', 'https://military.ncu.edu.tw/CSRC/disaster.php'), ('國軍招募', 'https://military.ncu.edu.tw/index.php/officer_leaflet.php'), ('智慧財產', 'https://military.ncu.edu.tw/index.php/characterEdu.php'), ('防制霸凌', 'https://military.ncu.edu.tw/index.php/./anti_bullying/index.php'), ('防制詐騙', 'https://military.ncu.edu.tw/index.php/./fraudprevention.php'), ('校安中心FB', 'https://www.facebook.com/%E4%B8%AD%E5%A4%AE%E5%A4%A7%E5%AD%B8%E6%A0%A1%E5%AE%89%E4%B8%AD%E5%BF%83-109722701493468'), ('生活輔導', 'https://www.ncu.edu.tw/'), ('學生兵役', 'https://military.ncu.edu.tw/index.php/military_service.php'), ('獎懲／操行', 'https://military.ncu.edu.tw/index.php/award_conduct.php'), ('學生請假', 'https://military.ncu.edu.tw/index.php/leaving.php'), ('研究生獎助學金', 'https://military.ncu.edu.tw/index.php/graduate_scholarship.php'), ('獎學金', 'https://military.ncu.edu.tw/index.php/scholarship.php'), ('學雜費減免', 'https://military.ncu.edu.tw/index.php/tuition_and_fee_exemption.php'), ('弱勢助學計畫-弱勢助學金', 'https://military.ncu.edu.tw/index.php/financial_help.php'), ('弱勢助學計畫-生活助學金', 'https://military.ncu.edu.tw/index.php/financial_help-2.php'), ('就學貸款', 'https://military.ncu.edu.tw/index.php/student_loan.php'), ('急難救助金', 'https://military.ncu.edu.tw/index.php/emergency_allowances.php'), ('校內工讀', 'https://military.ncu.edu.tw/index.php/assistance.php'), ('Information for International Students', 'https://military.ncu.edu.tw/index.php/international_students.php'), ('遺失物招領', 'https://military.ncu.edu.tw/LAF/index.php'), ('外宿資訊', 'https://military.ncu.edu.tw/house/housing.php'), ('表單下載', 'https://military.ncu.edu.tw/index.php/forms.php'), ('相關連結', 'https://www.ncu.edu.tw/'), ('緊急應變樓層平面圖', 'https://in.ncu.edu.tw/ncu57303/document.php?select=3&class1=%E7%B7%8A%E6%80%A5%E6%87%89%E8%AE%8A%E6%A8%93%E5%B1%A4%E5%B9%B3%E9%9D%A2%E5%9C%96'), ('學生藥物防治資源網', 'https://enc.moe.edu.tw/'), ('社會安全網 關懷e起來', 'https://ecare.mohw.gov.tw/'), ('國防部', 'https://www.mnd.gov.tw/'), ('國軍人才招募中心', 'https://rdrc.mnd.gov.tw/'), ('165全民防詐騙網', 'https://165.npa.gov.tw/'), ('內政部役政署', 'https://www.nca.gov.tw/'), ('財團法人法律扶助基金會', 'https://www.laf.org.tw/'), ('消防影音新聞台', 'http://enews.nfa.gov.tw/one-news.asp?NewsNo=3403'), ('交通安全入口網', 'https://168.motc.gov.tw/'), ('校園霸凌防治網', 'https://csrc.edu.tw/bully/'), ('崔媽媽基金會', 'https://www.tmm.org.tw/'), ('法治教育學生手冊下載區', 'http://depart.moe.edu.tw/ED2800/News_Content.aspx?n=98D52D5BD48ACC6D&sms=4E4FC20742593EE0&s=F6CB8BEB9B49059D'), ('智慧財產局', 'https://www.tipo.gov.tw/tw/mp-1.php'), ('中央大學研究發展處', 'http://in.ncu.edu.tw/ncu7020/Property/'), ('衛福部疾管署', 'https://www.cdc.gov.tw/Advocacy/SubIndex/2xHloQ6fXNagOKPnayrjgQ?diseaseId=N6XvFa1YP9CXYdB0kNSA9A&tab=3'), ('相關法規', 'https://military.ncu.edu.tw/index.php/regulation.php'), ('快速連結', 'https://www.ncu.edu.tw/'), ('兵役緩徵查詢', 'http://cis.ncu.edu.tw/iNCU/academic/register/checkStudentState'), ('常見Q&A', 'https://military.ncu.edu.tw/index.php/Q&A.php'), ('獎助學金管理系統', 'https://cis.ncu.edu.tw/Scholarship'), ('就學補助系統', 'https://portal.ncu.edu.tw/system/42'), ('活動回顧', 'https://military.ncu.edu.tw/index.php/review.php'), ('校園安全地圖', 'https://military.ncu.edu.tw/index.php/images/map.png'), ('提醒各位同學使用瓦斯熱水器，須注意室內保持空氣流通', 'http://www.nfa.gov.tw/main/Unit.aspx?ID=&MenuID=513&ListID=349'), ('預防七大熱門詐騙請參閱校園安全公告', 'http://military.ncu.edu.tw/CSRC/fraud.php'), ('最新公告', 'https://military.ncu.edu.tw/index.php/index.php'), ('交通安全報您知第0029期:「搭乘大眾交通工具應注意安全事項」', 'https://military.ncu.edu.tw/index.php/post_detail.php?no=1530'), ('中華民國汽車安全協會「學生總動員」交通安全大競賽─113年度全國汽車交通安全海報創作大賽', 'https://military.ncu.edu.tw/index.php/post_detail.php?no=1528'), ('§§自113年度(本學期)起~「大專校院弱勢學生助學計畫-校外租屋租金補貼」申請方式變更', 'https://military.ncu.edu.tw/index.php/post_detail.php?no=1527'), ('第五屆百花川詩獎徵稿', 'https://military.ncu.edu.tw/index.php/post_detail.php?no=1524'), ('113年交通部機車考照補助', 'https://military.ncu.edu.tw/index.php/post_detail.php?no=1523'), ('「國防部全球資訊網」成立1年期義務役專區', 'https://military.ncu.edu.tw/index.php/post_detail.php?no=1529'), ('公告「財團法人台北行天宮急難濟助辦法」', 'https://military.ncu.edu.tw/index.php/post_detail.php?no=1526'), ('§§ 開學了~~請同學於2/28日前上Portal更新校外租屋地址資料，以完成註冊程序(未完成者無法申請校外租屋租金補貼)', 'https://military.ncu.edu.tw/index.php/post_detail.php?no=1525'), ('交通安全報您知第0028期【113年寒假及農曆新年連假交安注意事項】', 'https://military.ncu.edu.tw/index.php/post_detail.php?no=1522'), ('113年交通部公路局機車考照補助', 'https://military.ncu.edu.tw/index.php/post_detail.php?no=1521'), ('第一頁', 'https://military.ncu.edu.tw/index.php/index.php?pageNum_military_bulletin=0'), ('1', 'https://military.ncu.edu.tw/index.php/index.php?pageNum_military_bulletin=0'), ('2', 'https://military.ncu.edu.tw/index.php/index.php?pageNum_military_bulletin=1'), ('3', 'https://military.ncu.edu.tw/index.php/index.php?pageNum_military_bulletin=2'), ('4', 'https://military.ncu.edu.tw/index.php/index.php?pageNum_military_bulletin=3'), ('5', 'https://military.ncu.edu.tw/index.php/index.php?pageNum_military_bulletin=4'), ('6', 'https://military.ncu.edu.tw/index.php/index.php?pageNum_military_bulletin=5'), ('7', 'https://military.ncu.edu.tw/index.php/index.php?pageNum_military_bulletin=6'), ('8', 'https://military.ncu.edu.tw/index.php/index.php?pageNum_military_bulletin=7'), ('9', 'https://military.ncu.edu.tw/index.php/index.php?pageNum_military_bulletin=8'), ('10', 'https://military.ncu.edu.tw/index.php/index.php?pageNum_military_bulletin=9'), ('下一頁', 'https://military.ncu.edu.tw/index.php/index.php?pageNum_military_bulletin=1'), ('最末頁', 'https://military.ncu.edu.tw/index.php/index.php?pageNum_military_bulletin=136'), ('相簿連結', 'https://photos.app.goo.gl/R3h4kqcFMiEM6ZDU6'), ('相簿連結', 'https://photos.app.goo.gl/rGwejUaRcc7Jhvsi7'), ('相簿連結', 'https://photos.app.goo.gl/zhZRJdg6Du2W5LD57'), ('隱私權政策聲明', 'https://www.cc.ncu.edu.tw/page/privacy')]\n"
      ]
     }
    ],
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
-    "\n",
-    "#: default setting.\n",
-    "url = \"https://military.ncu.edu.tw\"\n",
+    "import re\n",
     "\n",
     "try:\n",
     "    with requests.Session() as session: \n",
     "    # ~ Session can update the performance of the server. \n",
     "    \n",
+    "        # : Update the Cookies & Headers from driver\n",
+    "        for cookie in current_login_cookie:\n",
+    "            session.cookies.set(cookie['name'], cookie['value'])\n",
+    "        session.headers.update(headers)\n",
+    "    \n",
+    "        # :  Get the response of the website.\n",
     "        resp = session.get(url)\n",
-    "        # ~ Get the response of the website.\n",
     "        \n",
     "        # @ Check the response and Parser the response to HTML.\n",
     "        resp.raise_for_status()\n",
@@ -92,20 +299,49 @@
     "        \n",
     "        # @ Get the elements of the site.\n",
     "        title = soup.title.get_text() if soup.title else ''\n",
-    "        print(\"網頁標題:\", title)\n",
     "        \n",
+    "        content = soup.get_text().strip()\n",
+    "        content = re.sub(r'\\n+', '\\n', content)\n",
+    "        \n",
+    "        links = []\n",
+    "        all_links = soup.find_all(href=True)\n",
+    "        for link in all_links:\n",
+    "            href = link.get('href') \n",
+    "            text = link.get_text().strip()\n",
+    "\n",
+    "            if href:\n",
+    "                \n",
+    "                # : Get the Link and Href from the link\n",
+    "                if \"http\" not in href: \n",
+    "                    href = f\"{url}/{href}\" if href[0] != \"/\" else f\"{url}{href}\" # = href that include the relative path\n",
+    "                \n",
+    "                if text == \"\": \n",
+    "                    text = link.get('title','').strip()\n",
+    "                \n",
+    "                links.append((text,href))\n",
+    "                \n",
+    "    print(title, content, links)\n",
+    "            \n",
     "except requests.HTTPError as e:\n",
     "    print('HTTP error', e.response.status_code)\n",
     "except requests.RequestException as e:\n",
-    "    print('Request error:', e)"
+    "    print('Request error:', e)\n",
+    "except Exception as e:\n",
+    "    print('', '', [])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import collections\n",
+    "dq = collections.deque([1,2,3,4,5])\n",
+    "while dq:\n",
+    "    print(dq.popleft())\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
