--- a/test.ipynb
+++ b/test.ipynb
@@ -332,9 +332,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "import collections\n",
     "dq = collections.deque([1,2,3,4,5])\n",
@@ -345,10 +357,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'acknowledged': True}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/kc/jbnf20ls6hl2qsfkbcc8pb600000gn/T/ipykernel_5823/3924016829.py:10: DeprecationWarning: Passing transport options in the API method is deprecated. Use 'Elasticsearch.options()' instead.\n",
+      "  response = es.indices.delete(index=index_name, ignore=[400, 404])\n",
+      "/var/folders/kc/jbnf20ls6hl2qsfkbcc8pb600000gn/T/ipykernel_5823/3924016829.py:10: ElasticsearchWarning: Elasticsearch built-in security features are not enabled. Without authentication, your cluster could be accessible to anyone. See https://www.elastic.co/guide/en/elasticsearch/reference/7.17/security-minimal-setup.html to enable security.\n",
+      "  response = es.indices.delete(index=index_name, ignore=[400, 404])\n"
+     ]
+    }
+   ],
+   "source": [
+    "from elasticsearch import Elasticsearch\n",
+    "\n",
+    "# 連接到Elasticsearch\n",
+    "es = Elasticsearch(\"http://localhost:9200\") # 這裡的URL應該替換成你的Elasticsearch實例的地址\n",
+    "\n",
+    "# 索引名稱\n",
+    "index_name = \"ncu_chinese\"\n",
+    "\n",
+    "# 刪除索引\n",
+    "response = es.indices.delete(index=index_name, ignore=[400, 404])\n",
+    "\n",
+    "print(response)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from elasticsearch import Elasticsearch\n",
+    "item = 'content'\n",
+    "q = \"回頁首\"\n",
+    "\n",
+    "# : Connect Setting\n",
+    "index_name = 'ncu_military' # = create name.\n",
+    "es = Elasticsearch(hosts=[\"http://localhost:9200\"])\n",
+    "\n",
+    "type = 'one_to_one'\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
